--- a/paginas-sites/estilo-sites/sites.css
+++ b/paginas-sites/estilo-sites/sites.css
@@ -11,6 +11,7 @@ body{
     width:85vw;
     height: 100vh;
     background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 img{
     width: 100vw;
@@ -25,4 +26,9 @@ a{
     text-decoration: none;
     font-size: 20px;
     text-align: center;
+    transition-duration: 1s;
+}
+a:hover{
+    text-decoration: underline;
+    color: red;
 }
