--- a/estilo/style.css
+++ b/estilo/style.css
@@ -39,6 +39,7 @@ a{
     display: block;
     box-sizing: border-box;
     margin-bottom: 15px;
+    margin-top: 15px;
 }
 section#sites img:hover{
     transform: translate(-3px,-3px);
